tests/ui/read-only/embed_unreadable_inner.stderr
error[E0599]: no function or associated item named `read_fixed` found for struct `Point` in the current scope
 --> tests/ui/read-only/embed_unreadable_inner.rs:8:10
  |
3 | struct Point {
  | ------------ function or associated item `read_fixed` not found for this struct
...
8 | #[derive(ReadFixed)]
  |          ^^^^^^^^^ function or associated item not found in `Point`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `read_fixed`, perhaps you need to implement it:
          candidate #1: `ReadFixed`
  = note: this error originates in the derive macro `ReadFixed` (in Nightly builds, run with -Z macro-backtrace for more info)
